--- a/JSK_LION.html
+++ b/JSK_LION.html
@@ -14,8 +14,23 @@
   <body>
     <div class="black-bg">
       <div class="white-bg">
-        <h4>로그인하세요</h4>
-        <button class="btn btn-danger" id="close">닫기</button>
+        <div class="header">
+          <h3>로그인 또는 회원가입</h3>
+        </div>
+        <form action="JSK_LION.html" class="main_form">
+          <h3 class="header1">멋사에 오신 것을 환영합니다.</h3>
+          <div class="my-3">
+            <input type="text" placeholder="아이디" class="form-control" />
+          </div>
+          <div class="my-3">
+            <input
+              type="password"
+              placeholder="비밀번호"
+              class="form-control"
+            />
+          </div>
+          <button type="submit" class="btn w-btn w-btn-red">로그인</button>
+        </form>
       </div>
     </div>
 
